--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     
-<div id="heading-container">
+<div class="heading-container">
     <h4>News Website</h4>
 </div>
+
+<div class="options-container"></div>
+<div class="container"></div>
 
 
 
